tests/ui/discord-frontend/command_macro_expected_equal.stderr
error: expected `=`
  --> tests/ui/discord-frontend/command_macro_expected_equal.rs:30:1
   |
LL | #[hartex_discord_commands_macros::metadata(command_type)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `hartex_discord_commands_macros::metadata` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

